# websec

./: .dockerignore  .gitignore  CHANGELOG.md  CLIPPY_TODO.md  Cargo.toml  Dockerfile  LICENSE  README.md  clippy.toml  docker-compose.yml  install.sh  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  docker.yml  release.yml
.specify/memory/: constitution.md
benches/: detector_benchmarks.rs  middleware_benchmarks.rs  pipeline_benchmarks.rs  reputation_benchmarks.rs
config/: websec-apache-example.toml  websec-docker.toml  websec.toml  websec.toml.example
docker/: prometheus.yml
docs/: IDEA.md  Menaces.md  apache-configuration-guide.md  architecture.md  configuration.md  deployment-checklist.md  deployment.md  getting-started.md  install-script-guide.md  security-audit-plan.md  security-deployment-options.md  sni-configuration.md  troubleshooting-guide.md
scripts/: README.md  docker-build.sh  docker-test.sh  e2e-test.sh  test-backend.py  websec-lists.sh
specs/001-websec-proxy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/challenge/: manager.rs  mod.rs  types.rs
src/cli/: commands.rs  docker.rs  e2e.rs  lists.rs  mod.rs  setup.rs
src/config/: loader.rs  mod.rs  settings.rs
src/detectors/: bot_detector.rs  bruteforce_detector.rs  detector.rs  flood_detector.rs  geo_detector.rs  header_detector.rs  injection_detector.rs  mod.rs  protocol_detector.rs  registry.rs  scan_detector.rs  session_detector.rs
src/geolocation/: mod.rs
src/lists/: blacklist.rs  mod.rs  whitelist.rs
src/models/: mod.rs
src/observability/: logging.rs  metrics.rs  mod.rs
src/proxy/: backend.rs  circuit_breaker.rs  middleware.rs  mod.rs  retry.rs  server.rs  sni.rs
src/ratelimit/: mod.rs
systemd/: websec.service
tests/: blacklist_test.rs  bot_detection_integration_test.rs  bot_detector_contract_test.rs  bot_detector_unit_test.rs  bruteforce_detector_unit_test.rs  bruteforce_integration_test.rs  challenge_test.rs  flood_detector_unit_test.rs  flood_integration_test.rs  geo_detector_unit_test.rs  geo_integration_test.rs  header_detector_unit_test.rs  header_integration_test.rs  injection_detector_unit_test.rs  injection_integration_test.rs  lists_integration_test.rs  logging_test.rs  metrics_test.rs  protocol_detector_unit_test.rs  protocol_integration_test.rs  proxy_e2e_test.rs  scan_detector_unit_test.rs  scan_integration_test.rs  session_detector_unit_test.rs  session_integration_test.rs  sled_repository_test.rs  whitelist_test.rs
web/: README.md  dashboard.html
(+18 files in other folders)
