[package]
name = "websec"
version = "0.2.0"
edition = "2021"
authors = ["WebSec Team"]
description = "High-performance security reverse proxy for HTTP(S) threat detection and mitigation"
license = "MIT"
repository = "https://github.com/yrbane/websec"

[[bin]]
name = "websec"
path = "src/main.rs"

[lib]
name = "websec"
path = "src/lib.rs"

[dependencies]
# HTTP & Async Runtime
hyper = { version = "1.0", features = ["full", "server", "client", "http1", "http2"] }
tokio = { version = "1.35", features = ["full"] }

# Storage & Caching
redis = { version = "0.27.6", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"

# Rate Limiting
governor = "0.6"

# Geolocation
maxminddb = "0.24"

# Logging & Metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = { version = "0.13", features = ["process"] }

# TLS (optional)
rustls = { version = "0.23", optional = true, features = ["ring"] }
tokio-rustls = { version = "0.26", optional = true }
rustls-pemfile = { version = "2.0", optional = true }

# Configuration
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sled = "0.34"
bincode = "1.3"

# Utilities
async-trait = "0.1"
thiserror = "1.0"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json"] }
urlencoding = "2.1"
regex = "1.10"
once_cell = "1.19"
num_cpus = "1.16"
dashmap = "5.5"
md5 = "0.7"
rand = "0.9.2"
axum = "0.8.7"
axum-server = { version = "0.7.3", optional = true, default-features = false, features = ["tls-rustls"] }
tower = "0.5.2"
tower-http = "0.6.6"
http = "1.3.1"
http-body-util = "0.1.3"
bytes = "1.11.0"
hyper-util = { version = "0.1.18", features = ["client-legacy", "http1", "http2"] }
clap = { version = "4.5.52", features = ["derive", "env"] }
futures = "0.3"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.12"
tokio-test = "0.4"
tempfile = "3.10"

[[bench]]
name = "detector_benchmarks"
harness = false

[[bench]]
name = "reputation_benchmarks"
harness = false

[[bench]]
name = "middleware_benchmarks"
harness = false

[[bench]]
name = "pipeline_benchmarks"
harness = false

[features]
default = []
tls = ["rustls", "tokio-rustls", "rustls-pemfile", "axum-server"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
